Fixing Windows file path